# Mydiary

./: .env.prod  .gitignore  .gitmessage.txt  README.md  asd.py  asgi.py  main.py  package-lock.json  pyproject.toml  setting.py  test.sh  tortoise_config.py
.github/workflows/: checks.yml
app/: __init__.py  database.py  dependencies.py  index.html  main.py
app/apis/: diary_tags.py  user_router.py
app/apis/v1/: diary_router.py  diary_tags_router.py  tags_router.py  user_router.py
app/config/: config.py  database.py  tortoise_config.py
app/dtos/: diary_dto.py  diary_tags.py  tags_dto.py  user_dto.py
app/models/: __init__.py  alert_logs.py  diaries.py  diary_tags.py  emotion_keywords.py  emotion_stats.py  models.py  tags.py  users.py
app/services/: auth_service.py  diary_tags.py  gemini_service.py
app/tests/apis/v1/: temp.py
migrations/models/: 1_20250717182104_add_field.py
